--- a/src/scss/components/_pageTransition.scss
+++ b/src/scss/components/_pageTransition.scss
@@ -22,7 +22,14 @@
   transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
+.toggle-animation {
+  opacity: 0;
+  transform: translateY(50%);
+  transform-origin: 0% 0%;
+  transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1), opacity 0.3s cubic-bezier(0.86, 0, 0.07, 1),
+  transform-origin 0.3s cubic-bezier(0.86, 0, 0.07, 1);
 
+}
 
 
 .fade-up {
