--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -180,7 +180,7 @@ header:not(.post-header) {
     height: 100vh;
     grid-template-columns: 1fr 1fr;
     padding: 1em;
-    transition: heihgt 0.3s ease-in-out;
+    transition: height 1s cubic-bezier(0.39, 0.575, 0.565, 1);
     .dark-mode-toggle {
       grid-column: 1 / 3;
       grid-row: 1;
@@ -192,14 +192,13 @@ header:not(.post-header) {
       }
     }
     .desktop-nav {
-      font-size: 26px;
-      line-height: 30px;
-      grid-column: 1 / 3;
+      font-size: 20px;
+      line-height: 22px;
+      grid-column: 1 / 2;
       position: relative;
       flex-direction: column;
       align-items: flex-start;
       justify-content: center;
-      transition: bottom 0.8s ease-in-out, font-size 0.4s linear;
     }
 
     .scroll-nav {
@@ -227,6 +226,7 @@ header:not(.post-header) {
         .title {
           font-size: 13.8vw;
           line-height: 16.8vw;
+          transition: font-size 0.3s cubic-bezier(0.39, 0.575, 0.565, 1), top 1s cubic-bezier(0.39, 0.575, 0.565, 1);
         }
       }
     }
@@ -250,8 +250,8 @@ header:not(.post-header) {
       }
     }
   }
-  .scroll-header {
-    height: 10vh!important;
-    transition: heihgt 0.8s ease-in-out;
-  }
+  // .scroll-header {
+  //   height: 100px!important;
+  //   transition: height 1s cubic-bezier(0.39, 0.575, 0.565, 1);
+  // }
 }
