--- a/src/scss/main/_list.scss
+++ b/src/scss/main/_list.scss
@@ -4,6 +4,7 @@ main.list {
   display: grid;
   grid-template-rows: 50px;
   padding: 25rem 1rem 5rem;
+  margin-top: 100vh;
   height: 100vh;
   .project {
     position: relative;
