--- a/src/scss/main/_responsive.scss
+++ b/src/scss/main/_responsive.scss
@@ -244,9 +244,11 @@
         p {
           justify-self: start;
         }
+        .work-header-back{
+          justify-self: end;
+        }
     }
     #project-header span {
-        margin-bottom: 2rem;
         justify-self: flex-end;
     }
     .iframe-wrapper.module-full-width.small,
@@ -298,7 +300,7 @@
       grid-template-columns: 1fr;
       }
     #credits {
-        margin: 5rem 0;
+
         grid-template-columns: 1fr;
         padding: 0
     }
