--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,6 +20,7 @@
   'pages/homePage',
   'pages/homepageLayout',
   'pages/work',
+  'pages/about',
   'pages/work-subpage',
   'pages/blog',
   'pages/blogSubpage',
